--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
-    "framer-motion": "^10.12.4",
     "next": "13.3.0",
     "next-transpile-modules": "^10.0.0",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
