--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-big-calendar": "^1.6.3",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -24,11 +26,14 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-big-calendar": "^1.6.9",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "prettier": "^2.8.7",
